--- a/Sprout.Exam.WebApp/appsettings.json
+++ b/Sprout.Exam.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SproutExamDb;User Id=sa;Password=8Waystop;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SproutExamDb;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
       "LogLevel": {
